# ssimulacra2

./: .gitignore  CHANGELOG.md  README.md  RELEASING.md  mise.toml  mix.exs
.github/workflows/: ci.yml  release.yml
config/: config.exs
docs/: conformance-plan.md
docs/superpowers/plans/: 2026-06-19-ssimulacra2.md  2026-06-20-cancellation.md  2026-06-20-input-types.md
docs/superpowers/specs/: 2026-06-19-ssimulacra2-design.md  2026-06-20-cancellation-design.md  2026-06-20-input-types-design.md
lib/: ssimulacra2.ex
lib/ssimulacra2/: cancel_ref.ex  cancellation.ex  cancellation_token.ex  error.ex  native.ex  reference.ex  validate.ex  vix.ex
native/ssimulacra2_nif/: Cargo.toml
native/ssimulacra2_nif/.cargo/: config.toml
native/ssimulacra2_nif/src/: lib.rs
test/: conformance_test.exs  ssimulacra2_test.exs  test_helper.exs
test/fixtures/conformance/: README.md
test/ssimulacra2/: cancel_ref_test.exs  cancellation_test.exs  cancellation_token_test.exs  formats_test.exs  reference_test.exs  strip_parity_test.exs  vix_test.exs
test/support/: fixtures.ex
